# SWG-Escolinha-Futebol

./: pyproject.toml  pytest.ini
app/: dependencies.py  main.py
app/routers/v1/: dashboard.py  notifications.py  payments.py  responsibles.py  students.py  teams.py  users.py
app/utils/: firebase_connector.py  google_drive.py  helper.py  notification_manager.py  notifications.py
app/utils/db/: crud.py  database.py  models.py
frontend/vue-vite-app/: package-lock.json  package.json
frontend/vuetify-app/: index.html  package-lock.json  package.json  vite.config.mjs
frontend/vuetify-app/src/components/: CardForm.vue  PageForm.vue
frontend/vuetify-app/src/pages/: AreaAdministrativa.vue  CadastrarProfessor  CadastrarResponsavel.vue  CadastrarTurma.vue  CadastrarUsuario.vue  Dashboard.vue  Inicio.vue  ListarAlunos.vue  ListarPagamentos.vue  ListarTurmas.vue  ListarUsuarios.vue  Login.vue  Matricular.vue  Menu.vue  Pagamentos.vue  RegistrarPagamento.vue  index.vue
frontend/vuetify-app/src/pages/tela-inicial/: index.vue
frontend/vuetify-app/src/plugins/: index.js  router.js
frontend/vuetify-app/src/utils/: common.js  store.js
tests/api/: test_dashboard.py  test_payments.py  test_responsibles.py  test_root.py  test_students.py  test_teams.py  test_users.py
